Source/ISS/Development/NAMS/M9Concur/Vendor/Include/terM9.h

ViStatus _VI_FUNC terM9_closeDigitalTest (ViSession vi, ViInt32 testHandle);
ViStatus _VI_FUNC terM9_configureDigitalTestPatternSet (ViSession vi, ViInt32
                              testHandle, ViInt32 patternSetIndex);
ViStatus _VI_FUNC terM9_configureDigitalTestSetup (ViSession vi, ViInt32
                              testHandle);
ViStatus _VI_FUNC terM9_executeDigitalTest (ViSession vi, ViString testFile,
                              ViBoolean expandLoops, ViPInt32 testResult);
ViStatus _VI_FUNC terM9_getChannel (ViSession vi, ViInt32 scopeIndex, ViPInt32
                              capture, ViPInt32 chanMode, ViPInt32 connect,
                              ViPInt32 format, ViPInt32 impedance, ViPInt32
                              levelSetIndex, ViPInt32 load, ViPInt32 phaseIndex,
                              ViPInt32 windowIndex);
ViStatus _VI_FUNC terM9_getChannelCapture (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 capture);
ViStatus _VI_FUNC terM9_getChannelChanMode (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 chanMode);
ViStatus _VI_FUNC terM9_getChannelConnect (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 connect);
ViStatus _VI_FUNC terM9_getChannelFormat (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 format);
ViStatus _VI_FUNC terM9_getChannelImpedance (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 impedance);
ViStatus _VI_FUNC terM9_getChannelLevel (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 levelSetIndex);
ViStatus _VI_FUNC terM9_getChannelLoad (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 load);
ViStatus _VI_FUNC terM9_getChannelPhase (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 phaseIndex);
ViStatus _VI_FUNC terM9_getChannelWindow (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 windowIndex);
ViStatus _VI_FUNC terM9_getExtClockSrcLogicSelect (ViSession vi, ViPInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_getPhase (ViSession vi, ViInt32 scopeIndex, ViInt32
                              phaseIndex, ViPBoolean freerun, ViPInt32 trigger);
ViStatus _VI_FUNC terM9_getPhaseFreerun (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 phaseIndex, ViPBoolean freerun);
ViStatus _VI_FUNC terM9_getPhaseTrigger (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 phaseIndex, ViPInt32 trigger);
ViStatus _VI_FUNC terM9_getPinListPinCount (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViPInt32
                              pinListPinCount);
ViStatus _VI_FUNC terM9_getPinmap (ViSession vi, ViInt32 pinmapMaxCount,
                              ViPInt32 pinmapCount, ViInt32 _VI_FAR pinmap[]);
ViStatus _VI_FUNC terM9_getPinmapGroup (ViSession vi, ViInt32 index, ViInt32
                              groupMaxCount, ViPInt32 groupCount, ViInt32
                              _VI_FAR group[]);
ViStatus _VI_FUNC terM9_getPinmapValues (ViSession vi, ViInt32 startingIndex,
                              ViInt32 valueCount, ViInt32 _VI_FAR values[]);
ViStatus _VI_FUNC terM9_getSystemClock (ViSession vi, ViPInt32 divider, ViPInt32
                              edge, ViPInt32 mode, ViPInt32 reference, ViPInt32
                              outPath, ViPInt32 logicSelect);
ViStatus _VI_FUNC terM9_getSystemClockDivider (ViSession vi, ViPInt32 divider);
ViStatus _VI_FUNC terM9_getSystemClockEdge (ViSession vi, ViPInt32 edge);
ViStatus _VI_FUNC terM9_getSystemClockMode (ViSession vi, ViPInt32 mode);
ViStatus _VI_FUNC terM9_getTimingSet (ViSession vi, ViInt32 TSETIndex, ViPReal64
                              clockPeriod, ViInt32 scopeIndex, ViInt32
                              phaseEntryMaxCount, ViPInt32 phaseEntryCount,
                              ViReal64 _VI_FAR phaseEntry[], ViInt32
                              windowEntryMaxCount, ViPInt32 windowEntryCount,
                              ViReal64 _VI_FAR windowEntry[]);
ViStatus _VI_FUNC terM9_getTimingSetPeriod (ViSession vi, ViInt32 TSETIndex,
                              ViPReal64 clockPeriod);
ViStatus _VI_FUNC terM9_getTimingSetPhase (ViSession vi, ViInt32 TSETIndex,
                              ViInt32 scopeIndex, ViInt32 phaseIndex, ViPReal64
                              assertTime, ViPReal64 returnTime);
ViStatus _VI_FUNC terM9_getTimingSetPhaseAssert (ViSession vi, ViInt32
                              TSETIndex, ViInt32 scopeIndex, ViInt32 phaseIndex,
                              ViPReal64 assertTime);
ViStatus _VI_FUNC terM9_getTimingSetPhaseReturn (ViSession vi, ViInt32
                              TSETIndex, ViInt32 scopeIndex, ViInt32 phaseIndex,
                              ViPReal64 returnTime);
ViStatus _VI_FUNC terM9_getTimingSetWindow (ViSession vi, ViInt32 TSETIndex,
                              ViInt32 scopeIndex, ViInt32 windowIndex, ViPReal64
                              openTime, ViPReal64 closeTime);
ViStatus _VI_FUNC terM9_getTimingSetWindowClose (ViSession vi, ViInt32
                              TSETIndex, ViInt32 scopeIndex, ViInt32
                              windowIndex, ViPReal64 closeTime);
ViStatus _VI_FUNC terM9_getTimingSetWindowOpen (ViSession vi, ViInt32 TSETIndex,
                              ViInt32 scopeIndex, ViInt32 windowIndex, ViPReal64
                              openTime);
ViStatus _VI_FUNC terM9_init (ViRsrc rsrcName, ViBoolean idQuery, ViBoolean
                              resetInstr, ViPSession vi);
ViStatus _VI_FUNC terM9_openDigitalTest (ViSession vi, ViString testFile,
                              ViPInt32 testHandle);
ViStatus _VI_FUNC terM9_resetPinmap (ViSession vi);
ViStatus _VI_FUNC terM9_setChannel (ViSession vi, ViInt32 pinListCount, ViInt32
                              _VI_FAR pinList[], ViInt32 capture, ViInt32
                              chanMode, ViInt32 connect, ViInt32 format, ViInt32
                              impedance, ViInt32 levelSetIndex, ViInt32 load,
                              ViInt32 phaseIndex, ViInt32 windowIndex);
ViStatus _VI_FUNC terM9_setChannelCapture (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 capture);
ViStatus _VI_FUNC terM9_setChannelChanMode (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 chanMode);
ViStatus _VI_FUNC terM9_setChannelConnect (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 connect);
ViStatus _VI_FUNC terM9_setChannelFormat (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 format);
ViStatus _VI_FUNC terM9_setChannelImpedance (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 impedance);
ViStatus _VI_FUNC terM9_setChannelLevel (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 levelSetIndex);
ViStatus _VI_FUNC terM9_setChannelLoad (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 load);
ViStatus _VI_FUNC terM9_setChannelPhase (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 phaseIndex);
ViStatus _VI_FUNC terM9_setChannelWindow (ViSession vi, ViInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 windowIndex);
ViStatus _VI_FUNC terM9_setExtClockSrcLogicSelect (ViSession vi, ViInt32
                              logicSelect);
ViStatus _VI_FUNC terM9_setPhase (ViSession vi, ViInt32 scopeIndex, ViInt32
                              phaseIndex, ViBoolean freerun, ViInt32 trigger);
ViStatus _VI_FUNC terM9_setPhaseFreerun (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 phaseIndex, ViBoolean freerun);
ViStatus _VI_FUNC terM9_setPhaseTrigger (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 phaseIndex, ViInt32 trigger);
ViStatus _VI_FUNC terM9_setPinmap (ViSession vi, ViInt32 pinmapCount, ViInt32
                              _VI_FAR pinmap[]);
ViStatus _VI_FUNC terM9_setPinmapGroup (ViSession vi, ViInt32 index, ViInt32
                              groupCount, ViInt32 _VI_FAR group[]);
ViStatus _VI_FUNC terM9_setPinmapValues (ViSession vi, ViInt32 startingIndex,
                              ViInt32 valueCount, ViInt32 _VI_FAR values[]);
ViStatus _VI_FUNC terM9_setTimingSet (ViSession vi, ViInt32 TSETIndex, ViReal64
                              clockPeriod, ViInt32 scopeIndex, ViInt32
                              phaseEntryCount, ViReal64 _VI_FAR phaseEntry[],
                              ViInt32 windowEntryCount, ViReal64 _VI_FAR
                              windowEntry[]);
ViStatus _VI_FUNC terM9_setTimingSetPeriod (ViSession vi, ViInt32 TSETIndex,
                              ViReal64 clockPeriod);
ViStatus _VI_FUNC terM9_setTimingSetPhase (ViSession vi, ViInt32 TSETIndex,
                              ViInt32 scopeIndex, ViInt32 phaseIndex, ViReal64
                              assertTime, ViReal64 returnTime);
ViStatus _VI_FUNC terM9_setTimingSetPhaseAssert (ViSession vi, ViInt32
                              TSETIndex, ViInt32 scopeIndex, ViInt32 phaseIndex,
                              ViReal64 assertTime);
ViStatus _VI_FUNC terM9_setTimingSetPhaseReturn (ViSession vi, ViInt32
                              TSETIndex, ViInt32 scopeIndex, ViInt32 phaseIndex,
                              ViReal64 returnTime);
ViStatus _VI_FUNC terM9_setTimingSetWindow (ViSession vi, ViInt32 TSETIndex,
                              ViInt32 scopeIndex, ViInt32 windowIndex, ViReal64
                              openTime, ViReal64 closeTime);
ViStatus _VI_FUNC terM9_setTimingSetWindowClose (ViSession vi, ViInt32
                              TSETIndex, ViInt32 scopeIndex, ViInt32
                              windowIndex, ViReal64 closeTime);
ViStatus _VI_FUNC terM9_setTimingSetWindowOpen (ViSession vi, ViInt32 TSETIndex,
                              ViInt32 scopeIndex, ViInt32 windowIndex, ViReal64
                              openTime);