Source/Core/Source/System/TPExec20120313/src/TERM9.BAS

Attribute VB_Name = "terM9bas"
Option Explicit
DefInt A-Z

'
' Copyright 1997 by Teradyne, Inc., Boston, MA
'
' Module:   terM9.bas
' Creator:  Alycia A. McGoldrick
'
' Abstract: This file contains the function prototypes for the M9 VXI
'           plug&play driver for Visual Basic.  It is based on the following
'           C header files:  terM9.h, terM9_scope.h, terM9_defs.h,
'           terM9_errors.h, terM9_types.h
'
' Latest .h revisions:
'           terM9.h             M90301.11
'           terM9_scope.h       M90240
'           terM9_defs.h        M90300.10
'           terM9_errors.h      M90301.00
'           terM9_types.h       M90301.00
'
' Revision History:
'
' MANTEC.H_ 11-Nov-97 18:26:14    mam    add scope.bas and interrupt handler routines
' M90301.29 31-Oct-97 07:55:44    tpl    add diagnostic selftest function
' M90301.18 03-Sep-97 10:26:55    tpl    add some aliases
' M90301.11 12-Aug-97 10:26:01    tpl    add new functions
' M90301.07 31-Jul-97 15:20:29    tpl    rename getLastSyncResourceIndex
' M90301.05 31-Jul-97 10:45:20    tpl    Remove setResultIndex,set/getProbe add
'                                        parameters to some prepareprobe functions
' M90205    08-Jul-97 11:36:00    yae    Realigning with the latest revs of terM9.h
' M90204    03-Jul-97 10:46:00    aam    Realigning with the latest revs for the
'                                        FCS DLL
' M90203    23-May-97 10:00:00    aam    Updated to align with Beta-ship DLL
' M90202     1-May-97 11:15:00    aam    Changed TSETIdxes to be Longs not Integers
' M90201    25-Mar-97 11:56:29    aam    Creation
'
' terM9.h
' Note:  the format of the functions is:
'   Declare Function function Lib "terM9_32.dll" ([ByVal] parameterName As parameterType, ...) As Long
'
'   Note:  every function declaration must be declared on a single line
'

Declare Function terM9_init Lib "terM9_32.dll" (ByVal rsrcName As String, ByVal idQuery As Integer, ByVal resetInstr As Integer, vi As Long) As Long

Declare Function terM9_executeDigitalTest Lib "terM9_32.dll" (ByVal vi As Long, ByVal testFile As String, ByVal expandLoops As Integer, testResult As Long) As Long

Declare Function terM9_openDigitalTest Lib "terM9_32.dll" (ByVal vi As Long, ByVal testFile As String, testHandle As Long) As Long

Declare Function terM9_configureDigitalTestSetup Lib "terM9_32.dll" (ByVal vi As Long, ByVal testHandle As Long) As Long

Declare Function terM9_configureDigitalTestPatternSet Lib "terM9_32.dll" (ByVal vi As Long, ByVal testHandle As Long, ByVal patternSetIdx As Long) As Long

Declare Function terM9_closeDigitalTest Lib "terM9_32.dll" (ByVal vi As Long, ByVal testHandle As Long) As Long

Declare Function terM9_getPinmap Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinmapMaxCount As Long, pinmapCount As Long, pinmap As Long) As Long

Declare Function terM9_getPinmapValues Lib "terM9_32.dll" (ByVal vi As Long, ByVal startingIndex As Long, ByVal locationCount As Long, contents As Long) As Long

Declare Function terM9_getPinmapGroup Lib "terM9_32.dll" (ByVal vi As Long, ByVal index As Long, ByVal groupMaxCount As Long, groupCount As Long, group As Long) As Long

Declare Function terM9_setPinmap Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinmapCount As Long, pinmap As Long) As Long

Declare Function terM9_setPinmapValues Lib "terM9_32.dll" (ByVal vi As Long, ByVal startingIndex As Long, ByVal locationCount As Long, contents As Long) As Long

Declare Function terM9_setPinmapGroup Lib "terM9_32.dll" (ByVal vi As Long, ByVal index As Long, ByVal groupCount As Long, group As Long) As Long

Declare Function terM9_getPinListPinCount Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, pinListPinCount As Long) As Long

Declare Function terM9_resetPinmap Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_getChannel Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, Capture As Long, chanMode As Long, connect As Long, Format As Long, impedance As Long, LevelIdx As Long, Load As Long, PhaseIdx As Long, WindowIdx As Long) As Long

Declare Function terM9_getChannelCapture Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, Capture As Long) As Long

Declare Function terM9_getChannelChanMode Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, chanMode As Long) As Long

Declare Function terM9_getChannelConnect Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, connect As Long) As Long

Declare Function terM9_getChannelFormat Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, Format As Long) As Long

Declare Function terM9_getChannelImpedance Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, impedance As Long) As Long

Declare Function terM9_getChannelLevel Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, LevelIdx As Long) As Long

Declare Function terM9_getChannelLoad Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, Load As Long) As Long

Declare Function terM9_getChannelPhase Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, PhaseIdx As Long) As Long

Declare Function terM9_getChannelWindow Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, WindowIdx As Long) As Long

Declare Function terM9_setChannel Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal Capture As Long, ByVal chanMode As Long, ByVal connect As Long, ByVal Format As Long, ByVal impedance As Long, ByVal LevelIdx As Long, ByVal Load As Long, ByVal PhaseIdx As Long, ByVal WindowIdx As Long) As Long

Declare Function terM9_setChannelCapture Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal Capture As Long) As Long

Declare Function terM9_setChannelChanMode Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal chanMode As Long) As Long

Declare Function terM9_setChannelConnect Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal connect As Long) As Long

Declare Function terM9_setChannelFormat Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal Format As Long) As Long

Declare Function terM9_setChannelImpedance Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal impedance As Long) As Long

Declare Function terM9_setChannelLevel Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal LevelIdx As Long) As Long

Declare Function terM9_setChannelLoad Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal Load As Long) As Long

Declare Function terM9_setChannelPhase Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal PhaseIdx As Long) As Long

Declare Function terM9_setChannelWindow Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal WindowIdx As Long) As Long

Declare Function terM9_getTimingSet Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, clockPeriod As Double, ByVal scopeIdx As Long, ByVal phaseEntryMaxCount As Long, phaseEntryCount As Long, phaseEntry As Double, ByVal windowEntryMaxCount As Long, windowEntryCount As Long, windowEntry As Double) As Long

Declare Function terM9_getTimingSetPeriod Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, clockPeriod As Double) As Long

Declare Function terM9_getTimingSetPhase Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, assertTime As Double, returnTime As Double) As Long

Declare Function terM9_getTimingSetPhaseAssert Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, assertTime As Double) As Long

Declare Function terM9_getTimingSetPhaseReturn Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, returnTime As Double) As Long

Declare Function terM9_getTimingSetWindow Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal WindowIdx As Long, openTime As Double, closeTime As Double) As Long

Declare Function terM9_getTimingSetWindowOpen Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal WindowIdx As Long, openTime As Double) As Long

Declare Function terM9_getTimingSetWindowClose Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal WindowIdx As Long, closeTime As Double) As Long

Declare Function terM9_setTimingSet Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal clockPeriod As Double, ByVal scopeIdx As Long, ByVal phaseEntryCount As Long, phaseEntry As Double, ByVal windowEntryCount As Long, windowEntry As Double) As Long

Declare Function terM9_setTimingSetPeriod Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal clockPeriod As Double) As Long

Declare Function terM9_setTimingSetPhase Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, ByVal assertTime As Double, ByVal returnTime As Double) As Long

Declare Function terM9_setTimingSetPhaseAssert Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, ByVal assertTime As Double) As Long

Declare Function terM9_setTimingSetPhaseReturn Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, ByVal returnTime As Double) As Long

Declare Function terM9_setTimingSetWindow Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal WindowIdx As Long, ByVal openTime As Double, ByVal closeTime As Double) As Long

Declare Function terM9_setTimingSetWindowOpen Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal WindowIdx As Long, ByVal openTime As Double) As Long

Declare Function terM9_setTimingSetWindowClose Lib "terM9_32.dll" (ByVal vi As Long, ByVal TSETIdx As Long, ByVal scopeIdx As Long, ByVal WindowIdx As Long, ByVal closeTime As Double) As Long

Declare Function terM9_getPhase Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, freerun As Integer, trigger As Long) As Long

Declare Function terM9_getPhaseFreerun Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, freerun As Integer) As Long

Declare Function terM9_getPhaseTrigger Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, trigger As Long) As Long

Declare Function terM9_setPhase Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, ByVal freerun As Integer, ByVal trigger As Long) As Long

Declare Function terM9_setPhaseFreerun Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, ByVal freerun As Integer) As Long

Declare Function terM9_setPhaseTrigger Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal PhaseIdx As Long, ByVal trigger As Long) As Long

Declare Function terM9_getExtClockSrcLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, logicSelect As Long) As Long

Declare Function terM9_setExtClockSrcLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_getSystemClock Lib "terM9_32.dll" (ByVal vi As Long, divider As Long, edge As Long, mode As Long, reference As Long, outpath As Long, logicSelect As Long) As Long

Declare Function terM9_getSystemClockDivider Lib "terM9_32.dll" (ByVal vi As Long, divider As Long) As Long

Declare Function terM9_getSystemClockEdge Lib "terM9_32.dll" (ByVal vi As Long, edge As Long) As Long

Declare Function terM9_getSystemClockMode Lib "terM9_32.dll" (ByVal vi As Long, mode As Long) As Long
